--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "q5"
+name = "my_grep"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 clap = "4.1"
 regex = "1.11.0"
-once_cell = "1.20.1"
